--- a/css/styles.css
+++ b/css/styles.css
@@ -9,20 +9,42 @@ body {
   color: var(--white);
   min-height: 100vh;
 }
+main {
+  display: grid;
+  height: 100%;
+  height: 100%;
+  grid-template-areas:
+  "score title speed"
+  "canvas canvas canvas";
+}
+
 .desc {
   font-size: 39px;
   font-family: monospace;
   color: #e305d1;
   text-shadow: 0px 0px 28px #fb00ff, 0px 0px 4px #f6a4ff, 0px 0px 87px #ff00f7;
 }
-.desc:nth-child(1) {
+
+#score {
   justify-self: end;
+  grid-area: score;
 }
-.desc:nth-last-child(1){
-  justify-self: start;
+#speed {
+  grid-area: speed;
 }
+canvas {
+  background: #ffffff1c;
+  backdrop-filter: blur(21px);
+  border: 2px var(--white) solid;
+  margin: auto;
+  transform: rotateX(40deg);
+  box-shadow: inset 2px 0px 17px 9px #0088ff, 0px -9px 13px 8px #0088ff, inset 0px 8px 20px 0px #343a61;
+  height: 80%;
+}
+
 .contenedor {
   position: fixed; /* or absolute */
+  grid-area: canvas;
   top: 50%;
   left: 50%;
   margin-top: -250px;
@@ -35,16 +57,6 @@ body {
   margin: auto;
   margin-bottom: 3px;
 }
-#info {
-  font-size: larger;
-}
-canvas {
-  background: transparent;
-  border: 3px var(--white) solid;
-  margin: auto;
-  transform: rotateX(40deg);
-  box-shadow: inset 0px -13px 37px 9px #0088ff, -1px -10px 13px 6px #0088ff, inset 0px 9px #343a61;
-}
 #title {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
@@ -53,6 +65,7 @@ canvas {
   justify-items: center;
 }
 h1 {
+  grid-area: title;
   font-family: system-ui;
   font-size: 52px;
   text-align: center;
