--- a/css/styles.css
+++ b/css/styles.css
@@ -9,105 +9,99 @@ body {
   color: var(--white);
   min-height: 100vh;
 }
+.aling-center {
+  text-align: center;
+}
+.height-100 {
+  height: 100%;
+}
+.width-100 {
+  width: 100%;
+}
+h1 {
+  font-family: system-ui;
+  font-size: 54px;
+  color: aqua;
+  text-shadow: 0px 0px 2px black, 0px 0px 31px #00ffff;
+}
+h3 {
+  font-size: 42px;
+}
+#speedSelector {
+  font-size: 30px;
+  background: var(--bg-color);
+  color: var(--white);
+}
 main {
+  display: flex;
+  flex-direction: column;
+  width: 554px;
+  margin: auto;
+  box-shadow: -1px 5px 20px 0px #ffffff4f;
+}
+.info {
   display: grid;
-  height: 100%;
-  height: 100%;
-  grid-template-areas:
-  "score title speed"
-  "canvas canvas canvas";
+  box-shadow: 1px 20px 20px 0px #e305d13d, inset 0px -2px 12px 0px #e305d152;
+  grid-template-columns: 1fr 1fr;
+  background: #0a09035e;
 }
 
-.desc {
-  font-size: 39px;
+.info > *{
+  margin: 12px 0px;
+  font-size: 37px;
+  padding: 22px;
   font-family: monospace;
   color: #e305d1;
   text-shadow: 0px 0px 28px #fb00ff, 0px 0px 4px #f6a4ff, 0px 0px 87px #ff00f7;
 }
 
-#score {
-  justify-self: end;
-  grid-area: score;
-}
-#speed {
-  grid-area: speed;
-}
 canvas {
-  background: #ffffff1c;
+  background: #ffffff12;
   backdrop-filter: blur(21px);
-  border: 2px var(--white) solid;
+  border: 1px var(--white) solid;
   margin: auto;
-  transform: rotateX(40deg);
   box-shadow: inset 2px 0px 17px 9px #0088ff, 0px -9px 13px 8px #0088ff, inset 0px 8px 20px 0px #343a61;
-  height: 80%;
-}
-
-.contenedor {
-  position: fixed; /* or absolute */
-  grid-area: canvas;
-  top: 50%;
-  left: 50%;
-  margin-top: -250px;
-  margin-left: -250px;
+  height: 500px;
+  width: 500px;
+  transform: rotateX(48deg);
 }
 .container {
   display: flex;
+  margin: 49px 0px;
 }
 .container > * {
+  font-size: 34px;
   margin: auto;
-  margin-bottom: 3px;
 }
-#title {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  box-shadow: 3px 41px 63px white;
-  align-items: center;
-  justify-items: center;
-}
-h1 {
-  grid-area: title;
-  font-family: system-ui;
-  font-size: 52px;
-  text-align: center;
-  color: aqua;
-  text-shadow: 0px 0px 2px black, 0px 0px 31px #00ffff;
-}
-.modal {
-  display: none;
+#modal {
   position: fixed;
   z-index: 1;
-  padding-top: 250px;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(193, 48, 95, 0.14);
+  background-color: rgba(30, 54, 141, 0.14);
+  backdrop-filter: blur(3px);
 }
 .modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  background: rgba(92, 14, 14, 0.479);
-  margin: auto;
-  padding: 5px;
-  border: 3px solid rgba(255, 30, 0, 0.356);
   width: 400px;
-  border-radius: 20px;
+  border-radius: 9px;
+  box-shadow: 0px 0px 4px 0px #e212f34d;
+  background-color: #01013429;
 }
-.moral-start {
-  background-color: rgba(30, 54, 141, 0.14);
-  display: block;
+.modal-content > * {
+  color: var(--white) ;
 }
-.modal-content-start {
-  background-color: blue;
-}
+
 .modal-content > p {
-  color: rgb(255, 255, 255);
   font-size: 25px;
 }
 .modal-content > h2 {
-  margin-top: 10px;
-  font-size: xx-large;
-  color: rgb(255, 255, 255);
+  margin: 42px 0px;
+  font-size: 47px;
 }
 .btn {
   background: #af6cb4;
