--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -27,7 +27,7 @@ h1 {
 h3 {
   font-size: 42px;
 }
-#speedSelector {
+#speed-selector {
   font-size: 30px;
   background: var(--bg-color);
   color: var(--white);
