--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,13 +1,20 @@
 :root {
-  --white: #ffffff;
-  --bg-color: #000;
+  --white: #fff;
+  --dark: #000;
+  --light-white: #ffffff4f;
+  --light-blue: aqua;
+  --light-blue-shadow: #00ffff;
+  --light-pink: #e305d13d;
+  --light-pink-shadow: #e305d152;
 }
 body {
   margin: 0;
   padding: 0;
-  background: var(--bg-color);
+  background: var(--dark);
   color: var(--white);
-  min-height: 100vh;
+}
+*, *::before, *::after{
+  box-sizing: inherit;
 }
 .aling-center {
   text-align: center;
@@ -21,48 +28,55 @@ body {
 h1 {
   font-family: system-ui;
   font-size: 54px;
-  color: aqua;
-  text-shadow: 0px 0px 2px black, 0px 0px 31px #00ffff;
+  color: var(--light-blue);
+  text-shadow:
+    0px 0px 2px var(--dark),
+    0px 0px 31px var(--light-blue-shadow);
 }
 h3 {
   font-size: 42px;
 }
 #speed-selector {
   font-size: 30px;
-  background: var(--bg-color);
+  background: var(--dark);
   color: var(--white);
 }
 main {
   display: flex;
   flex-direction: column;
+  height: 100vh;
   width: 554px;
   margin: auto;
-  box-shadow: -1px 5px 20px 0px #ffffff4f;
+  box-shadow: -1px 5px 20px 0px var(--light-white);
 }
 .info {
   display: grid;
-  box-shadow: 1px 20px 20px 0px #e305d13d, inset 0px -2px 12px 0px #e305d152;
   grid-template-columns: 1fr 1fr;
-  background: #0a09035e;
+  box-shadow:
+    1px 20px 20px 0px var(--light-pink),
+    inset 0px -2px 12px 0px var(--light-pink-shadow);
 }
 
 .info > *{
-  margin: 12px 0px;
+  margin: 32px 0px;
   font-size: 37px;
-  padding: 22px;
   font-family: monospace;
-  color: #e305d1;
-  text-shadow: 0px 0px 28px #fb00ff, 0px 0px 4px #f6a4ff, 0px 0px 87px #ff00f7;
+  color: var(--light-pink);
+  text-shadow:
+    0px 0px 28px #fb00ff,
+    0px 0px 4px #f6a4ff,
+    0px 0px 87px #ff00f7;
 }
 
 canvas {
   background: #ffffff12;
   backdrop-filter: blur(21px);
   border: 1px var(--white) solid;
-  margin: auto;
-  box-shadow: inset 2px 0px 17px 9px #0088ff, 0px -9px 13px 8px #0088ff, inset 0px 8px 20px 0px #343a61;
-  height: 500px;
-  width: 500px;
+  margin: 0 auto;
+  box-shadow:
+    inset 2px 0px 17px 9px #0088ff,
+    0px -9px 13px 8px #0088ff,
+    inset 0px 8px 20px 0px #343a61;
   transform: rotateX(48deg);
 }
 .container {
@@ -115,23 +129,9 @@ canvas {
 }
 #btn-modal:hover {
   background: #a58366;
-  color: black;
+  color: var(--dark);
   border: rgb(104, 104, 185);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .has-fade {
   visibility: visible;
